# legalclient

./: .gitignore  CMakeLists.txt  README.md  auto-inject.bat  build.bat  inject.ps1  kill-mc.bat  vcpkg.json
.github/workflows/: build.yml
Client/: DllMain.cpp
Client/Core/: Client.cpp  Client.h  ModuleManager.h
Client/Events/: EventBus.h
Client/Hooks/: CommandQueueHook.h  D3DHook.h  InputHook.h
Client/Modules/: AutoJumpOnDamage.h  AutoSprint.h  InjectionNotice.h  KeystrokeHUD.h  Module.h  PlayerESP.h
Client/Rendering/: WorldToScreen.cpp  WorldToScreen.h
Client/SDK/: EntityList.cpp  EntityList.h  LocalPlayer.cpp  LocalPlayer.h  Math.h
Client/Settings/: ConfigManager.h
Client/UI/: MenuWindow.h
